# Popula

./: .gitignore  PHASE1_OPTIMIZATION_SUMMARY.md  PROJECT_CONTEXT.md  PROJECT_RULES.md  README.md  RUST_WORKER_SETUP.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/public/sample-data/: Migration category variant (2023_geog).txt  fertility.csv  humania.json  migration.csv  mortality.csv  population.csv
apps/web/src/: App.tsx  index.css  vite-env.d.ts
apps/web/src/components/: ErrorBoundary.tsx
apps/web/src/hooks/: useNats.ts  useNats.tsx  useProjection.ts
apps/web/src/providers/: NatsProvider.tsx
apps/web/src/services/: csvParser.test.ts  csvParser.ts  geo.integration.test.ts  geo.test.ts  geo.ts  nats.test.ts  nats.ts
apps/web/src/stores/: chatStore.test.ts  chatStore.ts  dataStore.test.ts  dataStore.ts  natsStore.ts  projectStore.ts  reportsStore.test.ts  reportsStore.ts  runsStore.test.ts  runsStore.ts  (+6 more)
data/sample/: .gitkeep  cz-population-2024.json
infra/: nats-server.conf
infra/scripts/: dev.ps1  start-nats.ps1
worker/: Cargo.toml
worker/src/: main.rs
worker/src/engine/: ccm.rs  ccm_tests.rs  mod.rs  population.rs  projection.rs  types.rs
worker/src/engine/geo/: area_calc.rs  mod.rs  vfr_parser.rs
worker/src/handlers/: geo_handler.rs  mod.rs  ping.rs  projection_handler.rs  scenario.rs
worker/src/storage/: memory.rs  mod.rs  traits.rs
worker/src/types/: demographic.rs  geo.rs  messages.rs  mod.rs  scenario.rs  shock.rs
(+107 files in other folders)
