[package]
name = "popula-worker"
version = "0.1.0"
edition = "2021"
authors = ["Popula Team"]
description = "Demographic modeling engine worker"
repository = "https://github.com/Oslicek/Popula"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# NATS messaging
async-nats = "0.38"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

# Geospatial processing
geo = "0.28"
quick-xml = "0.36"
geojson = { version = "0.24", features = ["geo-types"] }
rayon = "1.10"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
